--- a/order.html
+++ b/order.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <meta name="description" content="我們是從板橋起家的眼鏡行,恆源眼鏡,擁有豐富的品牌種類與完整的商品類型是在眾多商品中,篩選出絕對的好品質讓專業的我們為您量身打造專屬於您的眼鏡魅力。">
 <meta name="Keywords" content="恆源眼鏡,hengyuan,雷朋專賣店,蔡司專業眼鏡店,兒童眼鏡">
-<title>關於恆源眼鏡-品牌經營 專業服務的信念</title>
+<title>訂購須知-恆源眼鏡</title>
  <link rel="stylesheet" href="css/style.css" type="text/css" /> 
  <link rel="stylesheet" href="css/sub.css" type="text/css" /> 
    <link href="css/ibanner.css" rel="stylesheet" />
@@ -60,6 +60,7 @@ function formReset()
 </script></head>
 
 <body>
+    <!-- edit -->
     <div class="header">
         <div class="headerC">
             <!-- add -->
@@ -78,7 +79,7 @@ function formReset()
           <div class="mobile-search-form">
               <input type="text" placeholder="請輸入關鍵字">
           </div>
-          
+  
           <!--search E -->
         </div>  
       </div>
@@ -98,70 +99,56 @@ function formReset()
         <div class="clear"></div>
     <div class="content">
         <div class="about">
-            <h2 class="tit1">About us </h2>
+            <h2 class="tit1">ordering instructions</h2>
             <div class="clear"></div>
-            <div class="aboutc">
-                <div class="aboutimg"><img src="ad/about_littlead.jpg"></div>
-                <div class="clear"></div>
                 <div class="aboutck">
                 	<dl>
-                    	<dt>經營理念 Philosophy</dt>
+                    	<dt>q1：購物流程說明</dt>
                         <dd>
-<p>我們是從板橋起家的眼鏡行<br>
-從七坪的小店開始<br>
-戰戰兢兢<br>
-真心誠懇的接待每位客人<br>
-走過數個年頭 我們莫忘初衷<br>
-始終乃秉持著<br>
-品牌經營 專業服務的信念<br>
-致力於推廣更多好品質的眼鏡,並將品牌價值與眼鏡流行資訊帶給大家。<br>
-在業界,品牌的經營極其不易,不但要推廣好的產品與價值給顧客,還要面對市場以水貨,仿品,惡質削價競爭的情形。<br>
-但唯有堅定的信念才能讓我們在對的路上走的更遠<br>
-也唯有如此堅持<br>
-才能得到顧客的認同與信任</p>
-
-<p>恆源眼鏡 擁有豐富的品牌種類與完整的商品類型<br>
-是在眾多商品中,篩選出絕對的好品質<br>
-讓專業的我們為您量身打造專屬於您的眼鏡魅力。
-</p>  
-
-<p>如今,眼鏡已不再只是眼鏡，<br>
-是時尚，是品味，是個人專屬魅力的所在。<br>
-我們期待的是,當顧客眼鏡輕觸臉龐的霎那<br>
-光明的散發一種截然不同的形象和感受。<br>
-</p>
-
-<p>在眾多客人的鼓勵下,我們在台北市又多設一個門市據點<br>
-希望提供給大家更便捷的服務<br>
-對於大家的支持,我們既珍惜又感動<br>
-感謝老朋友給我們進步的機會,也期待新朋友進門來認識我們<br>
-在這裡，我們用最熱忱的心<br>
-讓每一位來的朋友,在專業的建議下能夠找到最適合的眼鏡<br>
-</p>  
-
-
-                      </dd>
+                        	<p>為提供更便捷快速的服務，在瀏覽網站時，有任何疑問的地方，歡迎來電或使用線上留言洽詢。</p>
+                        </dd>
+                    </dl>
+                    <dl>
+                    	<dt>q2：我該如何下單購買?</dt>
+                        <dd>
+                        	<p>1.線上客服留言<br/>
+                              2.FB私訊留言<br/>
+                              3.電話訂購 02-29539719<br/>
+                              4.親自至實體店購買</p>
+                        </dd>
+                    </dl>
+                    <dl>
+                    	<dt>q3：付款方式</dt>
+                        <dd>
+                        	<p>1.銀行匯款&ATM轉帳 (此為本公司帳號方便查詢,建議採用) </p>
+                            <p>銀行名稱:國泰世華_新板分行<br/>
+                                銀行代號:013<br/>
+                                戶名:巫魁升<br/>
+                                銀行帳號:2725-0601-6096</p>
+                           <p>為加速出貨作業,請您轉帳完成後，來電02-29539719或線上留言給我們，<br/>
+                             在收到您的匯款或ATM轉帳，無誤之後，您就可以在2日內收到您所購買的商品。</p>
+                           <p>2.貨到付款<br/>
+                            採用此方式付款,未滿2000元，須加收代收費70元。<br/>
+                            注意：若訂購商品須經過加工製作，研磨或尺寸變更者恕不提供貨到付款服務，請改採銀行ATM匯款。</p>
+                        </dd>
                     </dl>
                 </div>
-            </div>
         </div>
     </div>  
-     <!-- edit -->
-     <div class="footer">
-        <div class="footerc">
-            <p>東門店　Tel (02)2358-1939　台北市金山南路二段11號 <br class="br-mobile"><span>/</span> 板橋店　Tel (02)2953-9719　新北市板橋區華興街89號 <br class="br-mobile"><span>/</span> 三重店　Tel (02)2977-0109　新北市三重區集美街91號<br/>
-                Copyright 2014 © Xin Man liter Ltd.    Design by MI-GO</p>
-        </div>
+   <!-- edit -->
+   <div class="footer">
+	<div class="footerc">
+		<p>東門店　Tel (02)2358-1939　台北市金山南路二段11號 <br class="br-mobile"><span>/</span> 板橋店　Tel (02)2953-9719　新北市板橋區華興街89號 <br class="br-mobile"><span>/</span> 三重店　Tel (02)2977-0109　新北市三重區集美街91號<br/>
+			Copyright 2014 © Xin Man liter Ltd.    Design by MI-GO</p>
+	</div>
 </div>
 </div>
- <!-- add -->
- <script>
+<!-- add -->
+<script>
     $(".menu").bind("click",function(){
         if($(".nav").hasClass("active")){
-        console.log("???");
         $(".nav").removeClass("active");
         }else {
-        console.log("@@@");
         $(".nav").addClass("active");
         }
     });
@@ -175,6 +162,7 @@ function formReset()
         $(".mobile-search-form").hide();
     }
     })
+    
 </script>
 </body>
 </html>
